version 9.5 new url logic: /<controller>/<action>/<id>? new servlet/controller logic static web elements in root folder